[metadata]
name = zdb
version = 0.1.0
author = Prajwal
author_email = pmamledesai@roku.com
description = A brief description of the project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prajwalmaheshmamledesai/zdb
license = MIT

[options]
packages = find:
install_requires =
    -r requirements.txt
python_requires = >=3.7